--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,13 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           pip install --upgrade pip setuptools wheel maturin pytest
 
+      - name: Set Up Python Virtual Environment
+        run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
+          echo "$PWD/.venv/bin" >> $GITHUB_PATH
+
       - name: Build Python Package
         run: maturin develop
 
