Fix GitHub Actions for CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin"]
 build-backend = "maturin"
 
 [project]
-name = "why-too-fast-event-bus"
+name = "why_too_fast_event_bus"
 version = "0.1.0"
 description = "An async event bus for Python using Rust"
 authors = [{ name = "Jhonatan Teixeira Rios", email = "jhonatan.dev.rios@gmail.com" }]
@@ -13,4 +13,4 @@ dependencies = []
 
 [tool.maturin]
 bindings = "pyo3"
-python-packages = ["why_too_fast_event_bus"]
+python-packages = ["why_too_fast_event_bus_module"]
