--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,10 +26,10 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
+          echo "$PWD/.venv/lib/python3.12/site-packages" >> $GITHUB_PATH
 
       - name: Build Python Package
-        run: maturin develop
+        run: maturin develop --target-dir target
 
       - name: Run Python Tests
         run: pytest tests
