--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ dependencies = []
 
 [tool.maturin]
 bindings = "pyo3"
-python-packages = ["why_too_fast_event_bus_module"]
+module-name = "why_too_fast_event_bus.why_too_fast_event_bus_module"
