--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,9 @@ name: CI - Build & Test
 
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   test:
@@ -33,3 +35,11 @@ jobs:
 
       - name: Run Python Tests
         run: pytest tests
+
+      - name: Run Tests with Coverage
+        run: pytest --cov=why_too_fast_event_bus --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
