--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,13 +15,18 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
       - name: Install Dependencies
         run: |
           rustup target add x86_64-unknown-linux-gnu
-          pip install --upgrade pip setuptools wheel maturin pytest
+          pip install --upgrade pip setuptools wheel maturin pytest pytest-cov
 
       - name: Set Up Python Virtual Environment
         run: |
